more mobile-friendly

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,10 @@
 <!doctype html>
-<meta charset="utf-8">
-<link rel="stylesheet" href="{{ '/static/style.css'|url }}">
-<title>{% block title %}Главная{% endblock %} — effectivealtruism.ru</title>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="{{ '/static/style.css'|url }}">
+  <title>{% block title %}Главная{% endblock %} — effectivealtruism.ru</title>
+</head>
 <body>
   <div class="main">
 
