small html style improvements

--- a/templates/page.html
+++ b/templates/page.html
@@ -3,6 +3,6 @@
 {% block title %}{{ this.title or super() }}{% endblock %}
 
 {% block body %}
-  <header class='page-header'>{{ this.title }}</header>
+  <header class="page-header">{{ this.title }}</header>
   {{ this.body }}
 {% endblock %}
