--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{{ '/static/style.css'|url }}">
+  <link rel="stylesheet" href="{{ '/static/style.css' | asseturl }}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
 
   <title>{% block title %}Главная{% endblock %} — effectivealtruism.ru</title>
@@ -11,18 +11,17 @@
   <div class="main">
 
     <header class="main-header">
-      <h1><a href='/'><img src='/static/logo.png'><span>Эффективный альтруизм</span></a></h1>
+      <h1><a href="{{ '/' | url }}"><img src="{{ '/static/logo.png' | asseturl }}"><span>Эффективный альтруизм</span></a></h1>
       <nav class="main-menu">
         <ul class="nav navbar-nav">
           <li{% if this._path == '/' %} class="active"{% endif
-            %}><a href="{{ '/'|url }}">Главная</a></li>
+            %}><a href="{{ '/' | url }}">Главная</a></li>
           {% for href, title in [
             ['/content', 'Материалы'],
             ['/moscow', 'Встречи в Москве'],
-            ['/about', 'О сайте']
           ] %}
             <li{% if this.is_child_of(href) %} class="active"{% endif
-              %}><a href="{{ href|url }}">{{ title }}</a></li>
+              %}><a href="{{ href | url }}">{{ title }}</a></li>
           {% endfor %}
         </ul>
       </nav>
@@ -34,7 +33,9 @@
 
     <hr>
     <footer class="main-footer">
-      <a href='mailto:me@berekuk.ru'>me@berekuk.ru</a> | <a href='https://github.com/effectivealtruism-ru/website'>Github repo</a>
+      <a href="mailto:me@berekuk.ru">me@berekuk.ru</a>
+      | <a href="https://github.com/effectivealtruism-ru/website">Github repo</a>
+      | <a href="{{ '/about' | url }}">О сайте</a>
     </footer>
 
   </div>
