--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -1,114 +1,150 @@
 @import "http://webfonts.ru/import/robotoslab.css";
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 body {
-    font-family: sans-serif;
-    font-size: 18px;
-    line-height: 1.4em;
+  font-family: sans-serif;
+  font-size: 18px;
+  line-height: 1.4em;
 }
 
 a {
-    color: #2a99b6;
+  color: #2a99b6;
 }
 a:hover {
-    color: #33bbdf;
+  color: #33bbdf;
 }
 
 h1, h2, h3, header {
-    font-family: 'Roboto Slab';
+  font-family: 'Roboto Slab';
 }
 h1 {
-    font-size: 1.5em;
-    line-height: 1.2em;
+  font-size: 1.5em;
+  line-height: 1.2em;
 }
 h2 {
-    font-size: 1.2em;
+  font-size: 1.2em;
 }
 h3 {
-    font-size: 1em;
+  font-size: 1em;
 }
 
 
 div.main {
-    background: white;
+  background: white;
 }
 
 .page, .main-footer {
-    padding: 0 5px;
+  padding: 0 5px;
+}
+.page {
+  max-width: 760px;
+  margin: 0 auto 20px;
+  min-height: 60vh;
 }
 
 .main-header {
-    text-align: center;
-    margin: 0;
+  text-align: center;
+  margin: 0;
 }
 
 .main-header h1 {
-    margin: 0;
-    padding: 8px;
-    font-weight: bold;
-    font-size: 2em;
-    line-height: 1em;
+  margin: 0;
+  padding: 8px;
+  font-weight: bold;
+  font-size: 2em;
+  line-height: 1em;
 }
 .main-header h1 a {
-    color: black;
-    text-decoration: none;
-    display: table;
-    margin: 0 auto;
+  color: black;
+  text-decoration: none;
+  display: table;
+  margin: 0 auto;
 }
 .main-header h1 a span {
-    vertical-align: middle;
-    display: table-cell;
+  vertical-align: middle;
+  display: table-cell;
 }
 
 .main-menu {
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-    background-color: #eff;
-    padding: 10px;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  background-color: #eff;
+  padding: 10px;
 }
 .main-menu ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 .main-menu ul li {
-    display: inline;
-    text-transform: uppercase;
-    margin: 0 16px 0 0;
-    padding: 0;
+  display: inline;
+  text-transform: uppercase;
+  margin: 0 16px 0 0;
+  padding: 0;
 }
 .main-menu ul li a {
-    text-decoration: none;
+  text-decoration: none;
 }
 .main-menu ul li.active a {
-    color: black;
+  color: black;
 }
 
-div.page {
-    max-width: 860px;
-    margin: 0 auto;
-    min-height: 60vh;
+.page-title {
+  font-size: 1.5em;
+  line-height: 1.3em;
+  margin-top: 5px;
+  margin-bottom: 30px;
+  text-align: center;
 }
-.page-header {
-    font-size: 1.5em;
-    line-height: 1.3em;
-    margin-top: 0.5em;
-    margin-bottom: 0.8em;
-    text-align: center;
+.page-author {
+  font-size: 1.2em;
+  line-height: 1em;
+  margin-top: 30px;
+  margin-bottom: 5px;
+  text-align: center;
+}
+.translated-source {
+  margin-top: 40px;
+  font-size: 0.8em;
+}
+
+.tagline {
+  font-size: 1.5em;
+  line-height: 1.3em;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  text-align: center;
 }
 
 .main-footer {
-    padding-bottom: 5px;
-    text-align: center;
-    font-size: 0.7em;
+  padding-bottom: 5px;
+  text-align: center;
+  font-size: 0.7em;
 }
 
+.youtube {
+  margin-bottom: 30px;
+}
 .youtube iframe {
   width: 560px;
   height: 315px;
   display: block;
-  margin: 30px auto;
+  margin: 0 auto;
   border: 0;
+}
+.youtube-title {
+  font-size: 0.8em;
+  max-width: 600px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.translations {
+  margin-top: 40px;
+}
+.translations-index {
+  margin-top: 20px;
+  margin-bottom: 80px;
 }
