--- a/templates/translated.html
+++ b/templates/translated.html
@@ -15,6 +15,10 @@
   {% if this.translation_author %}
     <div class="translation-author">
       Автор перевода: {{ this.translation_author }}
+      {% if this.translation_author_vk_url %}
+        <a class="translation-author-vk" title="VK"
+           href="{{ this.translation_author_vk_url }}"></a>
+      {% endif %}
     </div>
   {% endif %}
 {% endblock %}
