fix title for /translations

--- a/templates/translations.html
+++ b/templates/translations.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
+{% block title %}Переводы{% endblock %}
+
 {% block body %}
   <div class="translations">
     <h2>Переводы статей из <a href="http://www.effective-altruism.com/ea/6x/introduction_to_effective_altruism/">Effective Altruism Handbook</a></h2>
